fix delete default styles
